Add empty style element.

--- a/src/starter.html
+++ b/src/starter.html
@@ -6,6 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>starter</title>
   <link rel="stylesheet" href="./reset.css">
+  <style>
+    
+  </style>
 </head>
 <body>
 
