--- a/src/06-grid-template-areas.html
+++ b/src/06-grid-template-areas.html
@@ -7,10 +7,62 @@
   <title>06-grid-template-areas</title>
   <link rel="stylesheet" href="./reset.css">
   <style>
-    
+    .container {
+      display: grid;
+      grid-gap: 2px;
+      height: 100vh;
+      grid-template-areas:
+        "header"
+        "section"
+        "aside"
+        "footer";
+      grid-template-rows:
+        1fr
+        2fr
+        1fr
+        1fr;
+    }
+    @media (min-width: 600px) {
+      .container {
+        grid-template-areas:
+          "header section"
+          "aside section"
+          "aside footer";
+        grid-template-rows:
+          1fr
+          6fr
+          1fr;
+        grid-template-columns:
+          1fr
+          6fr;
+      }
+    }
+    .container > * {
+      background-color: burlywood;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    header {
+      grid-area: header;
+    }
+    aside {
+      grid-area: aside;
+    }
+    section {
+      grid-area: section;
+    }
+    footer {
+      grid-area: footer;
+    }
   </style>
 </head>
 <body>
-
+  <div class="container">
+    <header>Header</header>
+    <aside>Aside</aside>
+    <section>Section</section>
+    <footer>Footer</footer>
+  </div>
 </body>
 </html>
